# mesa

./: .gitignore  meson.build  setup-ninja-msvc-debug.bat  setup-ninja-msvc-debugoptimized.bat  setup-ninja-msvc-release.bat  setup-vs-msvc-debug.bat  setup-vs-msvc-debugoptimized.bat  setup-vs-msvc-release.bat
.github/workflows/: build.yml
include/vulkan/: vulkan_core.h
src/compiler/nir/: nir.h
src/compiler/nir/tests/: core_tests.cpp
src/gallium/: meson.build
src/gallium/auxiliary/util/: u_threaded_context.c
src/gallium/drivers/zink/: meson.build  zink_batch.c  zink_batch.h  zink_bo.c  zink_bo.h  zink_compiler.c  zink_context.c  zink_device_info.py  zink_draw.cpp  zink_framebuffer.h  zink_instance.py  zink_kopper.c  zink_pipeline.c  zink_pipeline.h  zink_program.c  zink_public.h  zink_render_pass.c  zink_resource.c  zink_screen.c  zink_screen.h  zink_state.c  zink_surface.c  zink_types.h
src/gallium/drivers/zink/nir_to_spirv/: nir_to_spirv.c
src/gallium/frontends/wgl/: stw_context.c  stw_ext_extensionsstring.c  stw_ext_pixelformat.c  stw_framebuffer.c  stw_st.c
src/gallium/include/frontend/: winsys_handle.h
src/gallium/targets/libgl-gdi/: stw_wgl.c
src/gallium/targets/wgl/: meson.build  wgl.c
src/gallium/winsys/zink/wgl/: meson.build  zink_wgl_framebuffer.c  zink_wgl_public.h
src/mapi/glapi/: glapi_dispatch.c  meson.build
src/mapi/glapi/tracy/client/: TracyProfiler.cpp
src/mesa/: meson.build
src/mesa/main/: bufferobj.c  errors.c  getstring.c  version.c
src/mesa/state_tracker/: st_atom_constbuf.c
src/util/: log.c
